--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
-<h3>Hola Mundo devops ITLA, este es un demo de github pages!!</h3>
+<h3>Hola Mundo devops ITLA, git es cool!</h3>
+<blink> Esto debe parpadear </blink>
