fix texto parapdeante

--- a/index.html
+++ b/index.html
@@ -1,2 +1,15 @@
+
+<style>
+.blink {
+  animation: blinker 1s linear infinite;
+	}
+
+	@keyframes blinker {
+	  50% {
+		    opacity: 0;
+				  }
+					}
+					</style>
+
 <h3>Hola Mundo devops ITLA, git es cool!</h3>
-<blink> Esto debe parpadear </blink>
+<p class="blink"> Esto debe parpadear </p>
