--- a/index.html
+++ b/index.html
@@ -1,15 +1,7 @@
+<h3> Herramientas Favoritas de Devops</h3>
 
-<style>
-.blink {
-  animation: blinker 1s linear infinite;
-	}
-
-	@keyframes blinker {
-	  50% {
-		    opacity: 0;
-				  }
-					}
-					</style>
-
-<h3>Hola Mundo devops ITLA, git es cool!</h3>
-<p class="blink"> Esto debe parpadear </p>
+<ul>
+	<li>Github</li>
+	<li>Ansible</li>
+	<li>Docker</li>
+</ul>
