--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
-<h3> Herramientas Favoritas de Devops</h3>
+<h3> Mis Herramientas Devops</h3>
 
 <ul>
 	<li>Github</li>
 	<li>Ansible</li>
 	<li>Docker</li>
 	<li>Terraform</li>
+	<li>Claude Code</li>
 </ul>
